<?xml version="1.0"?>
<package format="3">
  <name>low_cost_underwater_slam</name>
  <version>0.0.0</version>
  <license>BSD</license>
  <description>A low cost SLAM system in ROS2 for underwater systems with DVL, IMU and a forward looking low-cost mechanical rotating sonar</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="thansen@constructor.university">tim</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>ping360_sonar_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>waterlinked_a50</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
